fixed main & footer spacing

--- a/assets/less/_footer.less
+++ b/assets/less/_footer.less
@@ -1,7 +1,6 @@
 #colophon {
 	background: url('@{imgUrl}/footerlist-bg.png') top center;
 	color: @footerColor;
-	margin-top: 30px;
 	a {
 		color: @footerColor;
 		&:hover {
