--- a/assets/less/_index.less
+++ b/assets/less/_index.less
@@ -6,6 +6,9 @@ body {
 		font-family: @droidFont;
 	}
 }
+main {
+	padding-bottom: 30px;
+}
 #featured-posts {
 	background: url('@{imgUrl}/feature-bg.png') top center;
 	.featured {
